error_templates/java/test_files/array_required_type_error/test.txt
template: "Java.ArrayRequiredTypeError"
---
NotArray.java:4: error: array required, but int found
        int value = number[0];
                            ^
1 error
===
template: "Java.ArrayRequiredTypeError"
---
You are calling an index notation on a variable with type int
